<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login_title"
        android:textColor="@color/primary_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:layout_weight="1"
        android:background="@drawable/ic_box_input_text"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="7dp"
        android:gravity="start"
        android:hint="@string/login_email_placeholder"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/secondary_text"
        android:textColorHint="@color/low_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/font" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin">

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:background="@drawable/ic_box_input_text"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="7dp"
            android:gravity="start"
            android:hint="@string/login_password_placeholder"
            android:imeOptions="actionGo"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/secondary_text"
            android:textColorHint="@color/low_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary_background"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/login_signin"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- SIGN UP -->
    <ScrollView
        android:id="@+id/scSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp"
        android:background="@color/primary_background"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp"
            android:elevation="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/inter_bold"
                android:text="Cadastro"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etNameSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/ic_box_input_text"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="7dp"
                android:gravity="start"
                android:hint="Nome"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/low_text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etEmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/ic_box_input_text"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="7dp"
                android:gravity="start"
                android:hint="@string/login_email_placeholder"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/low_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/font" />


            <EditText
                android:id="@+id/etPasswordSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_weight="3"
                android:background="@drawable/ic_box_input_text"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="7dp"
                android:gravity="start"
                android:hint="@string/login_password_placeholder"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/low_text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etPasswordVerifySignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_weight="3"
                android:background="@drawable/ic_box_input_text"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="7dp"
                android:gravity="start"
                android:hint="@string/login_password_verify_placeholder"
                android:imeOptions="actionGo"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/low_text"
                android:textSize="24sp" />

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:textColor="@color/low_text"-->
<!--                android:textSize="12sp"-->
<!--                android:text="Senha deve conter pelo menos 5 caracteres"/>-->

            <TextView
                android:id="@+id/tvHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/primary_text"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="Já possui cadastro? Entre com a sua conta."/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/secondary_background"
                android:text="@string/login_signin"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>


    </ScrollView>

    <!-- LOADER -->
    <RelativeLayout
        android:id="@+id/rlLoginLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:elevation="20dp"
        android:gravity="center"
        android:visibility="gone"
        android:alpha=".7">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:elevation="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>